syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/melloc1801/auth/pkg/user_v1";

service UserServiceV1 {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc GetUser(GetUserRequest) returns (User);
    rpc GetAllUsers(GetAllUsersRequest) returns (GetAllUsersResponse);
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message RequestUser {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRequest {
    RequestUser user = 1;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message User {
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
    string email = 4;
    string passwordHash = 5;
    google.protobuf.Timestamp created_at  = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
    repeated User users = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    string firstname = 2;
    string lastname = 3;
}

message DeleteUserRequest {
    int64 id = 1;
}
